Bug 29225 - Mistyped define statement in socket/sys/socket.h in line 184
Summary: Mistyped define statement in socket/sys/socket.h in line 184
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: network (show other bugs)
Version: 2.35
: P2 normal
Target Milestone: 2.36
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-04 16:33 UTC by DmiTriy Fedchenko
Modified: 2022-06-24 11:03 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
Patch for socket/sys/socket.h (222 bytes, patch)
2022-06-04 16:33 UTC, DmiTriy Fedchenko
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description DmiTriy Fedchenko 2022-06-04 16:33:16 UTC
Created attachment 14129 [details]
Patch for socket/sys/socket.h

In commit #77ede5f010f in line #184 wrote:
#  defien sendmsg __sendmsg64

Statement "defien" mistyped word define. This affects application compilations and preprocessing without defines __USE_GNU and __REDIRECT with error messages:

Syntax error at line 184, column 4, file /usr/include/sys/socket.h:
Error at line 184, column 4 in file /usr/include/sys/socket.h
#  defien sendmsg __sendmsg64

Please find my path suggestion in attach.
Comment 1 Sam James 2022-06-05 23:24:53 UTC
Could you send it to libc-alpha (the mailing list) please?
Comment 2 Sam James 2022-06-05 23:25:56 UTC
CCing florian b/c their commit.
Comment 3 Adhemerval Zanella 2022-06-06 15:55:35 UTC
Fixed on master.
Comment 4 Sourceware Commits 2022-06-08 12:59:21 UTC
The release/2.35/master branch has been updated by Adhemerval Zanella <azanella@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=99978cd42c55ee427fb512de69638045f6d525c7

commit 99978cd42c55ee427fb512de69638045f6d525c7
Author: Adhemerval Zanella <adhemerval.zanella@linaro.org>
Date:   Wed Jun 8 09:40:28 2022 -0300

    NEWS: Add a bug fix entry for BZ #29225