socket: Fix mistyped define statement in socket/sys/socket.h (BZ #29225)